...
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/myprofile_interests"
                android:layout_weight="1"
                android:alpha="0.87"

                />

            <View
...
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Interest"
                android:ems="10"
                android:id="@+id/newinterest_text"
                android:layout_weight="1"
                android:alpha="0.54"
                />

            <ImageButton
            android:background="@drawable/ic_add_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:onClick="btn_newinterest"
                android:id="@+id/btn_newinterest" />
        </LinearLayout>

        </LinearLayout>

</android.widget.RelativeLayout>
...
