<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_offer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.New_MakeAdate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:text="Date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_makeadate_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@android:drawable/ic_menu_today"
            android:background="?attr/editTextBackground"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:alpha="0.54"/>

        <TextView
            android:text="Time"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_makeadate_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:drawableRight="@android:drawable/ic_menu_recent_history"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/editTextBackground"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:alpha="0.54"/>

        <EditText
            android:hint="Event Name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/new_makeadate_eventname"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.54"/>

        <EditText
            android:hint="Event Location"
            android:layout_width="300dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:id="@+id/new_makeadate_eventlocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.54"/>

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_makeadate_eventtype"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:alpha="0.38"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <CheckBox
                android:text="With a man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_makeadate_withman"
                android:layout_gravity="left"
                android:alpha="0.54"
                />

            <CheckBox
                android:text="With a woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_makeadate_withwoman"
                android:layout_gravity="left"
                android:alpha="0.54"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_makeadate_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_done_white_18dp"
        app:elevation="3dp"
        android:onClick="btn_new_makeadate"
        app:backgroundTint="#FFAB00"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</android.widget.RelativeLayout>
