...
                android:alpha="0.54"
                />-->

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/makedate_overview"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                    app:elevation="3dp"
                    android:onClick="btn_find_makeadate"
                    app:backgroundTint="#FFAB00"
                    android:clickable="true" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_makeadate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_add_white_18dp"
...
