<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.Find">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!--<ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/find_results"
            android:layout_weight="1"
            android:alpha="0.54"/>-->

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/find_results"/>

    </LinearLayout>

</android.widget.RelativeLayout>
