...
            android:gravity="bottom"
            android:alpha="0.54"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_ticket_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_white_18dp"
        app:elevation="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
...
